# src/models/forbidden-error.ts
@@ -6,13 +6,11 @@ import * as z from "zod/v4-mini";
 import { safeParse } from "../lib/schemas.js";
 import { Result as SafeParseResult } from "../types/fp.js";
 import * as types from "../types/primitives.js";
-import { ErrorDetail, ErrorDetail$inboundSchema } from "./error-detail.js";
 import { SDKValidationError } from "./errors/sdk-validation-error.js";
 
 export type ForbiddenErrorError = {
   type: "forbidden";
   message: string;
-  details?: Array<ErrorDetail> | undefined;
 };
 
 /** @internal */
@@ -22,7 +20,6 @@ export const ForbiddenErrorError$inboundSchema: z.ZodMiniType<
 > = z.object({
   type: z._default(types.literal("forbidden"), "forbidden"),
   message: types.string(),
-  details: types.optional(z.array(ErrorDetail$inboundSchema)),
 });
 
 export function forbiddenErrorErrorFromJSON(
